<resources>
    <string name="app_name">MessApp</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="pwd">Senha</string>
    <string name="phone">Telefone</string>
    <string name="address">Endereço</string>
    <string name="skype_name">Skype</string>
    <string name="name_hint">Insira seu nome completo</string>
    <string name="email_hint">Digite seu e-mail de login</string>
    <string name="pwd_hint">Insira uma senha</string>
    <string name="phone_hint">Telefone</string>

    <string name="login">Entrar</string>
    <string name="forgot_pwd">Esqueceu a senha?</string>
    <string name="register">Criar conta</string>
    <string name="fb_login">Entrar com o Facebook</string>
    <string name="title_activity_register">Criar conta</string>
    <string name="save_register">Salvar</string>
    <string name="save_contact">Salvar</string>
    <string name="title_activity_main">MessApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="contacts_tab">Contatos</string>
    <string name="chats_tab">Conversas</string>
    <string name="name_incorrect_register">Nome inválido</string>
    <string name="email_incorrect_register">E-mail inválido</string>
    <string name="pwd_incorrect_register">Senha deve ter 6 a 20 caracteres, conter maiúsculas, minúsculas e um caractere especial</string>
    <string name="email_already_registerd">E-mail já utilizado para registro</string>
    <string name="user_registered_success">Usuário registrado com sucesso</string>
    <string name="contact_saved_success">Contato salvo com sucesso</string>
    <string name="user_or_pwd_incorrect_login">Usuário ou senha incorretos</string>
    <string name="phone_incorrect_contact">Telefone inválido</string>
    <string name="contact_already_registered">Já existe um contato com este e-mail</string>
    <string name="title_activity_contact">Contato</string>
    <string name="title_dialog_add_photo">Adicionar foto</string>
    <string name="title_permission_necessary">Permissão necessária</string>
    <string name="msg_permission_external_storage_camera">Para incluir uma foto é necessário conceder os acessos solicitados.</string>
    <string name="image_directory">/messapp</string>
    <string name="progress_bt_title">Bluetooth</string>
    <string name="progress_bt_desc">Procurando dispositivos…</string>
    <string name="action_bluetooth">Dispositivos bluetooth</string>
    <string name="my_last_location">Minha última localização</string>
    <string name="progress_login_title">Login</string>
    <string name="progress_login_desc">Efetuando login…</string>
    <string name="progress_register_title">Registro</string>
    <string name="progress_register_desc">Efetuando registro…</string>
    <string name="preference_file_key">br.iesb.messapp.preference_file</string>
    <string name="preference_uid">uid</string>
    <string name="preference_user_logged">user_logged</string>
    <string name="action_logout">Logout</string>
    <string name="msg_permission_location">Para usar o mapa é necessária a permissão à localização.</string>
    <string name="msg_permission_location_update">Sem autorização para acesso à localização sua posição não será atualizada no servidor.</string>
    <string name="action_delete">Remover</string>
    <string name="contact_list_updated">Lista de contatos atualizada</string>
    <string name="connection_failed">Falha de conexão de rede</string>

    <string-array name="photo_options">
        <item>Tirar foto</item>
        <item>Escolher da galeria</item>
        <item>Cancelar</item>
    </string-array>
    <string name="title_activity_bluetooth">Dispositivos</string>
    <string name="title_activity_maps">Mapa</string>

</resources>
