<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.iesb.messapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="99"
        android:title="@string/action_bluetooth"
        android:icon="@drawable/ic_bluetooth_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="98"
        android:title="@string/title_activity_maps"
        android:icon="@drawable/ic_place_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
