<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.iesb.messapp.ContactActivity"
    tools:showIn="@layout/activity_contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_contact_edit"
                android:layout_width="@dimen/picture_size_register"
                android:layout_height="@dimen/picture_size_register"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:scaleType="center"
                android:src="@drawable/ic_add_a_photo_24dp"
                android:clickable="true"
                android:onClick="onClickImageContact"/>

            <ImageView
                android:layout_width="@dimen/picture_size_register"
                android:layout_height="@dimen/picture_size_register"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar_frame"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:paddingStart="@dimen/label_padding"
            android:text="@string/name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/text_name_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_input_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:paddingStart="@dimen/label_padding"
            android:text="@string/email"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/text_email_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_input_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:paddingStart="@dimen/label_padding"
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/text_phone_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/text_input_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:paddingStart="@dimen/label_padding"
            android:text="@string/address"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/text_address_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_input_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:paddingStart="@dimen/label_padding"
            android:text="@string/skype_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/text_skype_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_input_font_size" />
    </LinearLayout>
</ScrollView>
